k8s/nlp-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nlp-worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nlp-worker
  template:
    metadata:
      labels:
        app: nlp-worker
    spec:
      containers:
      - name: nlp-worker-container
        image: atharvaramawat/nlp-doc-intel:latest 
        command: ["python", "-u", "worker.py"]
